03-Service: Add set application implementation
Signed-off-by: Vladimir Svistelnikov <svistelnikoff@gmail.com>

--- a/03-Service/.gitignore
+++ b/03-Service/.gitignore
@@ -1,3 +1,7 @@
 GetSetService/app/build/
 GetSetService/.idea/
 GetSetService/.gradle/
+
+SetterApp/app/build/
+SetterApp/.idea/
+SetterApp/.gradle/
