03-Service: Add get application implementation
Signed-off-by: Vladimir Svistelnikov <svistelnikoff@gmail.com>

--- a/03-Service/.gitignore
+++ b/03-Service/.gitignore
@@ -5,3 +5,7 @@ GetSetService/.gradle/
 SetterApp/app/build/
 SetterApp/.idea/
 SetterApp/.gradle/
+
+GetterApp/app/build/
+GetterApp/.idea/
+GetterApp/.gradle/
