apps: add set/clear actions to app/service
Signed-off-by: Vladimir Svistelnikov <svistelnikoff@gmail.com>

--- a/03-Service/SetterApp/app/build.gradle
+++ b/03-Service/SetterApp/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation fileTree(dir: '/media/glprocamp/Projects/Software/AndroidWS/hikey960/vendor/gl/apps/gl-android-training/03-Service/SetterApp/app/libs', include: ['*.aar', '*.jar'], exclude: [])
+    implementation files('libs/classes.jar')
 }
